--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.nicolappli.mynews">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -18,7 +18,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Controllers.Activities.SearchArticlesActivity"/>
+        <activity android:name=".Controllers.Activities.SearchArticlesActivity" />
+        <activity android:name=".Controllers.Activities.SearchResultsActivity" />
+        <activity android:name=".Controllers.Activities.NotificationsActivity"/>
+
+        <receiver android:name=".Utils.MyAlarmReceiver"
+            android:exported="true"/>
     </application>
 
 </manifest>
