--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,12 +18,47 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Controllers.Activities.SearchArticlesActivity" />
-        <activity android:name=".Controllers.Activities.SearchResultsActivity" />
-        <activity android:name=".Controllers.Activities.NotificationsActivity"/>
 
-        <receiver android:name=".Utils.MyAlarmReceiver"
-            android:exported="true"/>
+        <activity
+            android:name=".Controllers.Activities.SearchArticlesActivity"
+            android:label="Search Articles"
+            android:parentActivityName=".Controllers.Activities.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".Controllers.Activities.MainActivity"/>
+        </activity>
+
+        <activity
+            android:name=".Controllers.Activities.SearchResultsActivity"
+            android:label="Search Results"
+            android:parentActivityName=".Controllers.Activities.SearchArticlesActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".Controllers.Activities.SearchArticlesActivity"/>
+        </activity>
+
+        <activity
+            android:name=".Controllers.Activities.NotificationsActivity"
+            android:label="Notifications"
+            android:parentActivityName=".Controllers.Activities.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".Controllers.Activities.MainActivity"/>
+        </activity>
+
+        <activity
+            android:name=".Controllers.Activities.ShowArticleActivity"
+            android:label="Show Article"
+            android:parentActivityName=".Controllers.Activities.SearchResultsActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".Controllers.Activities.SearchResultsActivity"/>
+        </activity>
+
+        <receiver
+            android:name=".Utils.MyAlarmReceiver"
+            android:exported="true" />
+
     </application>
 
 </manifest>
